# umutextstats-python

./: .gitignore  README.md  compare_csv_columns.py  dataset-10.csv  dataset.csv  debug_gender_feats.py  dimension_stats.csv  features.csv  head  pipeline_stats.csv  pyproject.toml  sample.py  stats-pre.csv  stats.json
.github/workflows/: tests.yml
scripts/: build_accent_map.py  download_test_corpora.py  validate_feature_cases.py
tests/: test_cache.py  test_cache_cli.py  test_cli_analyze_integration.py  test_cli_config.py  test_config_equivalence.py  test_config_explain.py  test_config_tree.py  test_config_validator.py  test_config_yaml_exporter.py  test_config_yaml_loader.py  test_csv_reader.py  test_dimension_engine.py  test_dimension_factory.py  test_dimensions_average_word_length.py  test_dimensions_character_count.py  test_dimensions_character_frequency.py  test_dimensions_composite.py  test_dimensions_dependency_depth_dimension.py  test_dimensions_dependency_distance_dimension.py  test_dimensions_dependency_tag.py  test_dimensions_enclitics.py  test_dimensions_error_capitalization.py  test_dimensions_error_mispelling.py  test_dimensions_error_mispelling_accents.py  test_dimensions_error_repeated_words.py  test_dimensions_error_style_numbers.py  test_dimensions_error_style_same_start.py  test_dimensions_grammatical_gender.py  test_dimensions_language.py  test_dimensions_ner_tagging_tag.py  test_dimensions_passive_voice_dependency.py  test_dimensions_pattern.py  test_dimensions_periphrasis.py  test_dimensions_perspicuity.py  test_dimensions_pos_tagging_expression.py  test_dimensions_pos_tagging_tag.py  test_dimensions_ratio.py  test_dimensions_readability.py  test_dimensions_rtie.py  test_dimensions_rtie_deviation.py  (+20 more)
(+362 files in other folders)
