[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "umutextstats"
version = "0.1.0"
description = "Linguistic feature extraction tool based on dimensions"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Tu Nombre" }
]

dependencies = [
    "pandas>=2.0",
    "tqdm>=4.66",
    "emoji>=2.0",
    "pyarrow>=15.0",
    "regex>=2024.0",
    "pydantic>=2",
    "PyYAML>=6",
    "rich>=13"
]

[project.optional-dependencies]
nlp = [
    "stanza>=1.8",
    "pyspellchecker>=0.8",
    "fasttext-numpy2-wheel>=0.9.2"
]

dev = [
    "pytest>=8.0"
]

spell = [
    "hunspell"
]


[project.scripts]
umutextstats = "umutextstats.cli.main:main"


[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
umutextstats = [
    "resources/config/*.yaml",
    "resources/config/*.xml",
    "resources/dictionaries/*.txt"
]